Improved ColorRangeInterval-picker

--- a/web/index.html
+++ b/web/index.html
@@ -35,4 +35,11 @@
   <body>
     <script src="flutter_bootstrap.js" async></script>
   </body>
+      <!-- Prevent browser back/forward on horizontal swipe/trackpad gestures -->
+    <style>
+      html,
+      body {
+        overscroll-behavior-x: none;
+      }
+    </style>
 </html>
